--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mule.mulechain</groupId>
-    <artifactId>mulechain-whisperer</artifactId>
-    <version>0.0.10</version>
+    <groupId>com.mule.whisperer</groupId>
+    <artifactId>mac-whisperer</artifactId>
+    <version>0.0.22</version>
     <packaging>mule-extension</packaging>
-    <name>Mulechain Whisperer</name>
+    <name>MAC Whisperer</name>
 
     <parent>
         <groupId>org.mule.extensions</groupId>
