--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
             <version>20240303</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.16.1</version>
+        </dependency>
     </dependencies>
     
 	<repositories>
