--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mule.whisperer</groupId>
     <artifactId>mac-whisperer</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <packaging>mule-extension</packaging>
     <name>MAC Whisperer</name>
 
@@ -15,7 +15,6 @@
         <artifactId>mule-modules-parent</artifactId>
         <version>1.1.3</version>
     </parent>
-
 
     <properties>
         <muleJavaEeBomVersion>4.6.0</muleJavaEeBomVersion>
@@ -39,6 +38,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>javazoom</groupId>
+            <artifactId>jlayer</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <version>6.1.1-1.5.10</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mule.sdk</groupId>
             <artifactId>mule-sdk-api</artifactId>
             <version>0.9.0-rc1</version>
@@ -54,6 +65,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.16.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.givimad</groupId>
+            <artifactId>whisper-jni</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
     </dependencies>
     
 	<repositories>
@@ -64,6 +82,7 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>mulesoft-releases</id>
