--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,22 @@
     <parent>
         <groupId>org.mule.extensions</groupId>
         <artifactId>mule-modules-parent</artifactId>
-        <version>1.1.3</version>
+        <version>1.3.2</version>
     </parent>
 
     <properties>
         <muleJavaEeBomVersion>4.6.0</muleJavaEeBomVersion>
 		<formatterConfigPath>formatter.xml</formatterConfigPath>
 		<javaFormatter.plugin.version>2.0.1</javaFormatter.plugin.version>
-		<formatterGoal>validate</formatterGoal>	
+		<formatterGoal>validate</formatterGoal>
+        <!-- When updating the parent pom to 1.3.2, we must also upgrade the munit extensions plugin to 1.1.2 -->
+        <!-- See https://help.mulesoft.com/s/question/0D52T000064RgmpSAC/mule-4-custom-connector-mvn-install-failing-with-commulesoftmunitmunitremotejarjarwithdependencies232-not-found -->
+        <munit.extensions.maven.plugin.version>1.1.2</munit.extensions.maven.plugin.version>
+        <munit.version>3.0.0</munit.version>
     </properties>
 
    <dependencyManagement>
         <dependencies>
-
             <dependency>
                 <groupId>org.mule</groupId>
                 <artifactId>mule-javaee-runtime-bom</artifactId>
@@ -72,8 +75,55 @@
             <version>1.6.1</version>
         </dependency>
 
+        <!-- API, java.xml.bind module -->
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Runtime, com.sun.xml.bind module -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-    
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.mulesoft.munit</groupId>
+                <artifactId>munit-extensions-maven-plugin</artifactId>
+                <version>${munit.extensions.maven.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <phase>integration-test</phase>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mulesoft.munit</groupId>
+                        <artifactId>munit-runner</artifactId>
+                        <version>${munit.version}</version>
+                        <classifier>mule-plugin</classifier>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.mulesoft.munit</groupId>
+                        <artifactId>munit-tools</artifactId>
+                        <version>${munit.version}</version>
+                        <classifier>mule-plugin</classifier>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
+
 	<repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
